--- a/views/header.haml
+++ b/views/header.haml
@@ -6,7 +6,7 @@
       .span1.ele-pd
         %i.icon-user.icon-white
         = @auth.name
-      .span1.ele-pd
+      .span.ele-pd{:class => 'span1.5'}
         %i.icon-magnet.icon-white
         = @auth.team.name
       .span2.ele-pd
